trunk/Archive2/4a/efa95b0140837d/output
main.cpp: In function 'int main()':
main.cpp:3:8: error: use of deleted function 'main()::__lambda0& main()::__lambda0::operator=(const main()::__lambda0&)'
   test = test;
        ^
main.cpp:2:16: note: a lambda closure type has a deleted copy assignment operator
   auto test = []{};
                ^
