trunk/Archive2/4a/efa95b0140837d/main.cpp
int main() {
  auto test = []{};
  test = test;
}
